mobile app landing

--- a/index.html
+++ b/index.html
@@ -1,1 +1,111 @@
-Hello World
+<!DOCTYPE html>
+<html dir="auto" lang="en">
+<head>
+	<meta charset="UTF-8" />
+	<title>My Page Title</title>
+
+	<meta name="description" content="My Page Description" />
+	<meta name="viewport" content="width=device-width, initial-scale=1" />
+	<link rel="icon" href="assets/favicon.png" />
+
+	<meta property="og:title" content="My Page Title" />
+	<meta property="og:description" content="My Page Description" />
+	<meta property="og:image" content="assets/og-image.png" />
+
+	<link rel="stylesheet" href="assets/tobi.css" />
+	<link rel="stylesheet" href="assets/style.css" />
+
+</head>
+	<body>
+		<main>
+<header class="app__header container">
+	<div class="app__logo-wrapper"> <img class="app__logo" src="content/image/qwsurhue08od5atod1c0.png" alt="CrossLingo"></div>
+	<div class="app__infos">
+		<h1 class="app__name">CrossLingo</h1>
+		<p class="app__description">Generate and solve bilingual(EN-RU) crosswords to learn new words</p>
+		<div class="app__buttons app__buttons--desktop">
+			<a href="https://play.google.com/store/apps/details?id&#x3D;com.omen273.crossLingo" class="app__button-play" target="_blank" title="Get on Google Play">
+				<img src="assets/google-play-badge.png" alt="Get on Google Play">
+			</a>
+		</div>
+	</div>
+</header>
+<div class="app__buttons app__buttons--mobile container">
+	<a href="https://play.google.com/store/apps/details?id&#x3D;com.omen273.crossLingo" class="app__button-play" target="_blank" title="Get on Google Play">
+		<img src="assets/google-play-badge.png" alt="Get on Google Play">
+	</a>
+</div>
+<section class="app__screenshots app__section">
+	<div class="container">
+		<h2 class="app__section-title">Screenshots</h2>
+	</div>
+	<div class="app__screenshots-wrapper container-desktop">
+		<div class="app__screenshots-list">
+			<a href="content/image/jtyzkzsa7k6q37l4wrdd.png" class="lightbox">
+				<img src="content/image/jtyzkzsa7k6q37l4wrdd.png" class="app__screenshot" alt="" />
+			</a>
+			<a href="content/image/mg400erqcxz35ymf457i.png" class="lightbox">
+				<img src="content/image/mg400erqcxz35ymf457i.png" class="app__screenshot" alt="" />
+			</a>
+			<a href="content/image/mlsqhegq1qsj5hhqhd06.png" class="lightbox">
+				<img src="content/image/mlsqhegq1qsj5hhqhd06.png" class="app__screenshot" alt="" />
+			</a>
+			<a href="content/image/rcafmv3vhfe1znelz5hl.png" class="lightbox">
+				<img src="content/image/rcafmv3vhfe1znelz5hl.png" class="app__screenshot" alt="" />
+			</a>
+			<a href="content/image/107wrnb18kt333fhov8t.png" class="lightbox">
+				<img src="content/image/107wrnb18kt333fhov8t.png" class="app__screenshot" alt="" />
+			</a>
+		</div>
+	</div>
+</section>
+<section class="app__fulldescription app__section container">
+	<h2 class="app__section-title">Description</h2>
+	<div class="app__fulldescription-content">
+		<p>Bilingual crosswords are an easy and fun way to learn new foreign words. Currently, we suggest only the English-Russian version. There are many topics to choose from and the ability to generate crosswords countless times. On the first launch, select your level of English to adjust words provided for crosswords. Then you may change the level anytime in the settings. Correct answers are highlighted immediately and give you quick feedback. If you don&#39;t know an answer, you may use hints for one letter or the whole word. Those hints cost some number of stars — solve crosswords to earn more of them. Just try, solve, train your memory and improve your vocabulary!</p>
+<p>You will find:</p>
+<ul>
+<li>different topics to generate crosswords (either single or multiple)</li>
+<li>different language levels</li>
+<li>generated crosswords are not limited</li>
+<li>portrait screen mode</li>
+<li>hints for letters and words</li>
+<li>offline mode</li>
+<li>no advertising</li>
+</ul>
+
+	</div>
+</section>
+		</main>
+		<footer class="footer">
+			<div class="container">
+				<div class="footer__container">
+					<p class="footer__love">
+						<script>document.write('&copy;' + (new Date()).getFullYear());</script><noscript>&copy;2021</noscript> All rights reserved
+							&mdash; Template by <a href="https://www.sandoche.com" target="_blank">Sandoche</a>
+							&mdash; Powered by <a href="https://t3mpl.n4no.com/" target="_blank" title="T3MPL Editor">T3MPL</a>
+					</p>
+					<ul class="footer__links">
+							<li class="footer__link">
+								<a href="page-1.html">Privacy</a>
+							</li>
+							<li class="footer__link">
+								<a href="https://n4no.com/" targe="_blank">GitHub</a>
+							</li>
+							<li class="footer__link">
+								<a href="https://n4no.com/" targe="_blank">GitHub</a>
+							</li>
+					</ul>
+				</div>
+			</div>
+		</footer>
+
+		<script type="text/javascript" src="assets/tobi.min.js" /></script>
+		<script>
+			window.onload = function () {
+				var tobi = new Tobi();
+			};
+		</script>
+
+  </body>
+</html>
