--- a/index.html
+++ b/index.html
@@ -2,9 +2,9 @@
 <html dir="auto" lang="en">
 <head>
 	<meta charset="UTF-8" />
-	<title>My Page Title</title>
+	<title>CrossLingo</title>
 
-	<meta name="description" content="My Page Description" />
+	<meta name="description" content="Generate and solve bilingual(EN-RU) crosswords to learn new words" />
 	<meta name="viewport" content="width=device-width, initial-scale=1" />
 	<link rel="icon" href="assets/favicon.png" />
 
