switch to Russian

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html dir="auto" lang="en">
+<html dir="auto" lang="ru">
 <head>
 	<meta charset="UTF-8" />
 	<title>CrossLingo</title>
@@ -22,7 +22,7 @@
 	<div class="app__logo-wrapper"> <img class="app__logo" src="content/image/qwsurhue08od5atod1c0.png" alt="CrossLingo"></div>
 	<div class="app__infos">
 		<h1 class="app__name">CrossLingo</h1>
-		<p class="app__description">Generate and solve bilingual(EN-RU) crosswords to learn new words</p>
+		<p class="app__description">Учи английские слова, создавая и разгадывая кроссворды по темам</p>
 		<div class="app__buttons app__buttons--desktop">
 			<a href="https://play.google.com/store/apps/details?id&#x3D;com.omen273.crossLingo" class="app__button-play" target="_blank" title="Get on Google Play">
 				<img src="assets/google-play-badge.png" alt="Get on Google Play">
@@ -37,7 +37,7 @@
 </div>
 <section class="app__screenshots app__section">
 	<div class="container">
-		<h2 class="app__section-title">Screenshots</h2>
+		<h2 class="app__section-title">Скриншоты</h2>
 	</div>
 	<div class="app__screenshots-wrapper container-desktop">
 		<div class="app__screenshots-list">
@@ -60,18 +60,18 @@
 	</div>
 </section>
 <section class="app__fulldescription app__section container">
-	<h2 class="app__section-title">Description</h2>
+	<h2 class="app__section-title">Описание</h2>
 	<div class="app__fulldescription-content">
-		<p>Bilingual crosswords are an easy and fun way to learn new foreign words. Currently, we suggest only the English-Russian version. There are many topics to choose from and the ability to generate crosswords countless times. On the first launch, select your level of English to adjust words provided for crosswords. Then you may change the level anytime in the settings. Correct answers are highlighted immediately and give you quick feedback. If you don&#39;t know an answer, you may use hints for one letter or the whole word. Those hints cost some number of stars — solve crosswords to earn more of them. Just try, solve, train your memory and improve your vocabulary!</p>
-<p>You will find:</p>
+		<p>Кроссворды - это простой и увлекательный способ изучения иностранных слов. Для удобства слова разбиты по темам, по ним можно генерировать огромное множество уникальных кроссвордов. В начале необходимо указать свой уровень владения английским языком, чтобы использовать для кроссвордов слова заданной сложности. После этого уровень можно изменить в настройках. Удобная подсветка правильных ответов сразу поможет себя проверить. В игре можно воспользоваться подсказкой для буквы или слова, если не знаешь ответа. Такая подсказка стоит определенное количество звезд, которые начисляются за правильно отгаданный кроссворд. Пробуй, решай, тренируй память и пополняй словарный запас!</p>
+<p>Что внутри:</p>
 <ul>
-<li>different topics to generate crosswords (either single or multiple)</li>
-<li>different language levels</li>
-<li>generated crosswords are not limited</li>
-<li>portrait screen mode</li>
-<li>hints for letters and words</li>
-<li>offline mode</li>
-<li>no advertising</li>
+<li>выбор слов по заданным темам (одной или нескольким)</li>
+<li>разная сложность для разных уровней владения языком</li>
+<li>создание неограниченного количества кроссвордов</li>
+<li>портретный режим ориентации экрана</li>
+<li>подсказки для букв и слов</li>
+<li>работа без интернета</li>
+<li>отсутствие рекламы</li>
 </ul>
 
 	</div>
